# personal-quant

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
docs/superpowers/plans/: 2026-04-24-initial-build-openai.md
pipeline/: __init__.py  cli.py  config.py  dry_run.py  portfolio.py  universe.py
pipeline/agent/: __init__.py  context_builder.py  openai_agent.py  prompts.py  schemas.py
pipeline/analysis/: __init__.py  market_report.py  technical.py
pipeline/data/: __init__.py  market.py
pipeline/reporting/: __init__.py  email_builder.py  sender.py
tests/: helpers.py  test_cli_market.py  test_cli_portfolio.py  test_config.py  test_context_builder.py  test_dry_run.py  test_email_builder.py  test_market.py  test_market_report.py  test_openai_agent.py  test_portfolio.py  test_schemas.py  test_sender.py  test_technical.py  test_universe.py
